--- a/templates/kite_landing.html
+++ b/templates/kite_landing.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-    <title>FeatureiQ Pro</title>
+    <title>KiteConnect Landing</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.min.css" rel="stylesheet">
