--- a/templates/prices_shares.html
+++ b/templates/prices_shares.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kite Connect Monitoring</title>
     <style>
     table {
         font-size: 16px; /* You can adjust the size as needed */
